--- a/2018-08-02/hoanvu.html
+++ b/2018-08-02/hoanvu.html
@@ -4,12 +4,13 @@
     <title><Aptech-php-14-leviethoanvu></Aptech-php-14-leviethoanvu> </title>
 </head>
 <body> 
-    <h1 style="color: brown">  Le Viet Hoan Vu    </h1>
-    <h2 style="color: cadetblue">CN14</h2>
-    <h3>CN15 </h3>
-
-    <p>CN13</p>
-
+  <h1> <center style="color: blue " ><b>BÀI TẬP VỀ NHÀ</b></center></h1>
+    <h2 style="color: brown"> <b>Lê Viết Hoàn Vũ</b></h2>
+    <img src="chelsea.jpg" width="320" height="200" >
+    <p><b style="color: black" >Vô địch cup FA 2018</b></p>
+    <video width="320" height="240 " controls >
+        <source src="chelseavsbayen.mp4" type="video/mp4"
+    </video>
 </body>
 </html>
 </htlm>
