--- a/2018-08-02/hoanvu.html
+++ b/2018-08-02/hoanvu.html
@@ -4,13 +4,60 @@
     <title><Aptech-php-14-leviethoanvu></Aptech-php-14-leviethoanvu> </title>
 </head>
 <body> 
-  <h1> <center style="color: blue " ><b>BÀI TẬP VỀ NHÀ</b></center></h1>
-    <h2 style="color: brown"> <b>Lê Viết Hoàn Vũ</b></h2>
-    <img src="chelsea.jpg" width="320" height="200" >
-    <p><b style="color: black" >Vô địch cup FA 2018</b></p>
-    <video width="320" height="240 " controls >
-        <source src="chelseavsbayen.mp4" type="video/mp4"
-    </video>
+  <h1> <center style="color: blue " ><b>TIỂU SỬ BẢN THÂN</b></center></h1>
+    
+    <img src="hòavang.jpg" width="280" height="280" align="left" >
+    <b style="color: black" >Họ và tên:  </b>
+    <span style="font-size: 22px color: #000; "><b>Lê Viết Hoàn Vũ</b></span>
+    <p><b style="color: black" >Ngày sinh:  </b>
+        <span style="font-size: 22px color: #000; "><b>19-12-1994</b></span></p>
+    <p><b style="color: black" >Quê quán:  </b>
+        <span style="font-size: 22px color: #000; "><b>Hòa Phước, Hòa Vang, Đà nẵng</b></span></p>  
+    <p>
+        <b style="color: black" >Số điện thoại di động:  </b>
+        <span style="font-size: 22px color: #000; "><b>01678874097</b></span></p>
+    <p>
+            <b style="color: black" >Dân tộc:  </b>
+            <span style="font-size: 22px color: #000; "><b>Kinh</b></span></p>  
+    <p>
+            <b style="color: black" >Giới tính:  </b>
+            <span style="font-size: 22px color: #000; "><b>Nam</b></span></p>    
+    <p>
+            <b style="color: black" >Số chứng minh nhân dân:  </b>
+            <span style="font-size: 22px color: #000; "><b>221723779</b></span></p> 
+    <p>
+            <b style="color: black" >Tôn giáo:  </b>
+            <span style="font-size: 22px color: #000; "><b>Không</b></span></p> 
+    <p>
+            <b style="color: black" >Trình độ học vấn:  </b>
+            <span style="font-size: 22px color: #000; "><b>Đại Học</b></span></p> 
+   <p>
+       <table border="" >
+            <caption align="bottom" style="font-size: 22px"><b>Bảng tóm tắt quá trình học tập</b></caption>
+           <tr bgcolor="green">
+               <th><b>Thời gian</b></th>
+               <th><b>Nơi học tập</b></th>
+           </tr>
+           <tr>
+               <td>Từ 2001-2005</td>
+               <td> Trường THCS số 1 Hòa Phước </td>
+           </tr>
+           <tr>
+               <td>Từ 2006-2010</td>
+               <td> Trường THCS Nguyễn Văn Linh </td>
+           </tr>
+           <tr>
+               <td> Từ 2010-2013</td>
+               <td> Trường THPT Hòa Vang </td>
+           </tr>
+           <tr>
+               <td> Từ 2013 đến nay </td>
+               <td> Đại Học Giao Thông Vận Tải tp Hồ Chí Minh </td>
+           </tr>
+       </table>
+   </p>                                    
+</body>
+    
 </body>
 </html>
 </htlm>
