Tieu-su-ban-than-02

--- a/2018-08-02/hoanvu.html
+++ b/2018-08-02/hoanvu.html
@@ -51,9 +51,13 @@
                <td> Trường THPT Hòa Vang </td>
            </tr>
            <tr>
-               <td> Từ 2013 đến nay </td>
+               <td> Từ 2013 đến 06-2018 </td>
                <td> Đại Học Giao Thông Vận Tải tp Hồ Chí Minh </td>
            </tr>
+          <tr>
+              <td> Từ 06-2018 đến nay</td>
+              <td>Đang theo học tại Softech Aptech Đà Nẵng</td>
+          </tr> 
        </table>
    </p>                                    
 </body>
