--- a/2018-08-02/hoanvu.html
+++ b/2018-08-02/hoanvu.html
@@ -23,11 +23,11 @@
             <b style="color: black" >Giới tính:  </b>
             <span style="font-size: 22px color: #000; "><b>Nam</b></span></p>    
     <p>
-            <b style="color: black" >Số chứng minh nhân dân:  </b>
-            <span style="font-size: 22px color: #000; "><b>221723779</b></span></p> 
+            <b style="color: black" >Tên Facebook  </b>
+            <span style="font-size: 22px color: #000; "><b><a href="https://www.facebook.com/Tonyvu1912">Tony Vũ</a></b></span></p> 
     <p>
-            <b style="color: black" >Tôn giáo:  </b>
-            <span style="font-size: 22px color: #000; "><b>Không</b></span></p> 
+            <b style="color: black" >Gmail  </b>
+            <span style="font-size: 22px color: #000; "><b><a href="https://mail.google.com/mail/u/0/#inbox">Hoanvudn94@gmail.com</a></b></span></p>  
     <p>
             <b style="color: black" >Trình độ học vấn:  </b>
             <span style="font-size: 22px color: #000; "><b>Đại Học</b></span></p> 
@@ -58,8 +58,12 @@
               <td> Từ 06-2018 đến nay</td>
               <td>Đang theo học tại Softech Aptech Đà Nẵng</td>
           </tr> 
+
        </table>
-   </p>                                    
+   </p>   
+   <video src="chelseavsbayen.mp4" height="320" width="580"  loop autoplay  controls >
+
+   </video>                                 
 </body>
     
 </body>
