--- a/2018-08-02/hoanvu.html
+++ b/2018-08-02/hoanvu.html
@@ -23,11 +23,11 @@
             <b style="color: black" >Giới tính:  </b>
             <span style="font-size: 22px color: #000; "><b>Nam</b></span></p>    
     <p>
-            <b style="color: black" >Tên Facebook  </b>
-            <span style="font-size: 22px color: #000; "><b><a href="https://www.facebook.com/Tonyvu1912">Tony Vũ</a></b></span></p> 
+            <b style="color: black" >Tên Facebook:  </b>
+            <span style="font-size: 22px color: #000; "><b><a href="https://www.facebook.com/Tonyvu1912 ";target="_blank" >Tony Vũ</a></b></span></p> 
     <p>
-            <b style="color: black" >Gmail  </b>
-            <span style="font-size: 22px color: #000; "><b><a href="https://mail.google.com/mail/u/0/#inbox">Hoanvudn94@gmail.com</a></b></span></p>  
+            <b style="color: black" >Gmail:  </b>
+            <span style="font-size: 22px color: #000; "><b><a href="https://mail.google.com/mail/u/0/#inbox"; target="_blank">Hoanvudn94@gmail.com</a></b></span></p>  
     <p>
             <b style="color: black" >Trình độ học vấn:  </b>
             <span style="font-size: 22px color: #000; "><b>Đại Học</b></span></p> 
