--- a/2018-08-04/hoanvu.html
+++ b/2018-08-04/hoanvu.html
@@ -6,42 +6,41 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body> 
-  <h1 id="tieu-de" > <center style="color: blue " ><b>TIỂU SỬ BẢN THÂN</b></center></h1>
+  <h1 id="tieu-de" > <center  ><b>TIỂU SỬ BẢN THÂN</b></center></h1>
     
     <div><img src="hòavang.jpg" width="280" height="280" align="left" >
-   <li> <b style="color: black" >Họ và tên:  </b>
-    <span style="font-size: 22px color: #000; "><b style="color: blue" >Lê Viết Hoàn Vũ</b></span></li>
-    <p><li><b style="color: black" >Ngày sinh:  </b>
-        <span style="font-size: 22px color: #000;        "><b>19-12-1994</b></span></p></li>
-    <p><li><b style="color: black" >Quê quán:  </b>
-        <span style="font-size: 22px color: #000; "><b>Hòa Phước, Hòa Vang, Đà nẵng</b></span></li></p>  
+   <li> <b >Họ và tên: <span >Lê Viết Hoàn Vũ</b></span></li></p>
+    <p><li><b>Ngày sinh:  </b>
+        <span><b>19-12-1994</b></span></p></li>
+    <p><li><b>Quê quán:  </b>
+        <span><b>Hòa Phước, Hòa Vang, Đà nẵng</b></span></li></p>  
     <p><li>
-        <b style="color: black" >Số điện thoại di động:  </b>
-        <span style="font-size: 22px color: #000; "><b>01678874097</b></span></li></p>
-    <p><li>          <b style="color: black" >Dân tộc:  </b>
-            <span style="font-size: 22px color: #000; "><b>Kinh</b></span></li></p>  
+        <b>Số điện thoại di động:  </b>
+        <span><b>01678874097</b></span></li></p>
+    <p><li>          <b>Dân tộc:  </b>
+            <span><b>Kinh</b></span></li></p>  
     <p><li>
-            <b style="color: black" >Giới tính:  </b>
-            <span style="font-size: 22px color: #000; "><b>Nam</b></span></li></p>    
+            <b>Giới tính:  </b>
+            <span><b>Nam</b></span></li></p>    
     <p><li>
-            <b style="color: black" >Tên Facebook:  </b>
-            <span style="font-size: 22px color: #000; "><b><a href="https://www.facebook.com/Tonyvu1912 "; 
+            <b>Tên Facebook:  </b>
+            <span><b><a href="https://www.facebook.com/Tonyvu1912 "; 
             target="_blank" >Tony Vũ</a></b></span></li></p> 
     <p>
         <p><li>
-            <b style="color: black" >Gmail:  </b>
+            <b>Gmail:  </b>
             <b>Hoanvudn94@gmail.com</b>:
             <a href="mailto:hoanvudn94@gmail.com?Subject=Hello%20again" target="_top">Send Mail</a></li>
             </p> 
     <p><li>
-            <b style="color: black" >Trình độ học vấn:  </b>
-            <span style="font-size: 22px color: #000; "><b>Đại Học</b></span></li></p> 
+            <b>Trình độ học vấn:  </b>
+            <span><b>Đại Học</b></span></li></p> 
    <p>
        <table id="bang" border="" >
             <caption align="bottom" style="font-size: 22px"><b>Bảng tóm tắt quá trình học tập</b></caption>
            <tr bgcolor="green">
-               <th><b style="color: white">Thời gian</b></th>
-               <th><b style="color: white">Nơi học tập</b></th>
+               <th><b>Thời gian</b></th>
+               <th><b>Nơi học tập</b></th>
            </tr>
            <tr>
                <td>Từ 2001-2005</td>
