created bai tap 1 va 2 cong tat

--- a/2018-08-09/form.html
+++ b/2018-08-09/form.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         
-  <link rel="stylesheet" href="bootstrap1.css">
+  <link rel="stylesheet" href="bootstrap.css">
   <link rel="stylesheet" href="formbootstrap.css">
     </head>
     <body>
@@ -15,16 +15,10 @@
                             <img class="mb-4" src="http://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">  
                             <h2>Please sign in</h2>
                             <form>
-                                <p><input id="input1" type="email" placeholder="Email address" style="width: 300px; border-radius: 6px" required autofocus ></p>
-                                <input id="input2" type="password" placeholder="Password" style="width: 300px; border-radius: 7px">
+                                <p><input id="input1" type="text" placeholder="Email address" style="width: 300px"></p>
+                                <input id="input2" type="text" placeholder="Password" style="width: 300px">
                             </form>
-                            <div class="checkbox mb-3">
-                                <label>
-                                  <input class="remember" type="checkbox" value="remember-me"> Remember me
-                                </label>
-                              </div>
-                            <button class="btn btn-lg btn-primary btn-block" style="border-radius: 5px" width="400pxtem" >Sign in</button>
-                            <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+                            <button class="bg-warning" style="border-radius: 5px" width="400pxtem" >Sign in</button>
                       </div>
                       <div class="col-2"></div>
                       
